2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-06-17  Stefan Kost  <ensonic@users.sf.net>

	* src/trashapplet.h:
	Correct GObject macro

2006-03-22  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* docs/ru/ru.po: Added Russian translation.

2006-02-27  Luca Ferretti  <elle.uca@libero.it>

	* docs/it/it.po: Updated Italian translation.

2006-01-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* docs/es/es.po: Updated Spanish translation.

2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: small update

2006-01-17  Glynn Foster  <glynn.foster@sun.com>

	* src/Makefile.am: Fix build by adding some '\'s.

2006-01-15  Davyd Madeley  <davyd@madeley.id.au>

	* src/trashapplet.c: things are moved to the trash, not copied.
	  Override the suggested mouse cursor to show the cursor for "move".
	  Patch from Bas van der Lei <pubmail@xs4all.nl>. Closes #316433.

2006-01-15  Davyd Madeley  <davyd@madeley.id.au>

	* src/trashapplet.c:
	* src/trashapplet.h: resize trashapplet to fit strange panel sizes.
	  Closes #326979. Patch from Michael Hofmann <mh21@piware.de>.

2006-01-06  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: small update, by Christophe Bliard
	<christophe.bliard@trux.info>

2005-12-22  Vincent van Adrighem  <adrighem@gnome.org>

	* docs/Makefile.am: Added "nl" (Dutch) to DOC_LINGUAS.
	* docs/nl/*: Added Dutch translation by
	Myckel Habets.

2005-12-03  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/*: small update, by Christophe Bliard
	<christophe.bliard@trux.info>
	* docs/*: give some .cvsignore love

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-09-21  Alessio Frusciante  <algol@firenze.linux.it>

	* docs/Makefile.am: Added "it" (Italian) to DOC_LINGUAS.
	* docs/it/*: Added Italian translation by
	Luca Ferretti <elle.uca@infinito.it>.
