@@ -20,7 +20,7 @@
         </oaf_attribute>
         <oaf_attribute name="name" type="string" _value="Trash"/>
         <oaf_attribute name="description" type="string" _value="Go to Trash"/>
-	<oaf_attribute name="panel:icon" type="string" value="gnome-fs-trash-full"/>
+	<oaf_attribute name="panel:icon" type="string" value="user-trash-full"/>
 	
 	<oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
 	<oaf_attribute name="bugzilla:product" type="string" value="gnome-applets"/>
