@@ -1,3 +1,15 @@
+2006-07-10  Rodney Dawes  <dobey@novell.com>
+
+	* GNOME_Panel_TrashApplet.server.in.in:
+	* trashapplet.c (trash_applet_show_about):
+	Use user-trash-full instead of gnome-fs-trash-full as per the icon
+	naming specification
+
+	* trashapplet.h: Use user-trash and user-trash-full as per the icon
+	naming spec, instead of gnome-fs-trash-*
+
+	Fixes #346485
+
 2006-06-29  Daniel Nylander  <po@danielnylander.se>
 
         * docs/sv/sv.po: Added Swedish translation.
